fixed info buttons

--- a/www/index.html
+++ b/www/index.html
@@ -85,7 +85,6 @@
                 <div><a href="#pestpage" data-transition="slide" data-direction="reverse"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
                 <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
                 <h1>SnapPest</h1>
-               <a href="#mainpage" data-transition="fade"><div class="click"></div></a> 
         </div>
 	
 		
@@ -146,10 +145,9 @@
 
         <!-- Universal header -->
         <div data-role="header" data-position="fixed">
-               <div><a href="#pestpage"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
+               <div><a href="#mainpage" data-transition="slide"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
                 <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
                 <h1>SnapPest</h1>
-                <a href="#mainpage" data-transition="slide"><div class="click"></div></a> 
 
         </div>
 
@@ -188,10 +186,9 @@
 
            <!-- Universal header -->
             <div data-role="header" data-position="fixed">
-                   <div><a href="#pestpage" data-transition="slide"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
+                   <div><a href="#mainpage" data-transition="slide" data-direction="reverse"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
                    <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
                    <h1>SnapPest</h1>
-                    <a href="#mainpage" data-transition="slide" data-direction="reverse" ><div class="click"></div></a> 
            </div>
 
            <!-- Page content -->
@@ -237,10 +234,9 @@
 
         <!-- Universal header -->
          <div data-role="header" data-position="fixed">
-                <div><a href="#pestpage" data-transition="slide" ><img id="infoButt" src="css/images/AboutButton.png"></a></div>
+                <div><a href="#mainpage" data-transition="slide" data-direction="reverse" ><img id="infoButt" src="css/images/AboutButton.png"></a></div>
                 <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
                 <h1>SnapPest</h1>
-                <a href="#mainpage" data-transition="slide" data-direction="reverse"><div class="click"></div></a> 
         </div>
 
         <!-- Page content -->
@@ -289,10 +285,9 @@
 
            <!-- Universal header -->
             <div data-role="header" data-position="fixed">
-                   <div><a href="#pestpage" data-transition="slide"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
+                   <div><a href="#mainpage" data-transition="slide" data-direction="reverse"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
                    <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
-                   <h1>SnapPest</h1>
-                    <a href="#mainpage" data-transition="slide" data-direction="reverse"><div class="click"></div></a> 
+                   <h1>SnapPest</h1> 
            </div>
 
            <!-- Page content -->
@@ -339,10 +334,9 @@
 
               <!-- Universal header -->
                <div data-role="header" data-position="fixed">
-                      <div><a href="#pestpage" data-transition="slide"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
+                      <div><a href="#mainpage" data-transition="slide" data-direction="reverse"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
                       <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
                       <h1>SnapPest</h1>
-                       <a href="#mainpage" data-transition="slide" data-direction="reverse"><div class="click"></div></a> 
               </div>
 
               <!-- Page content -->
