Moved the "Number of..." down
Moved the “Number of possums you have spotted: …” bit down a bit on the
page (the Possum Info Page) so that it doesn’t overlap with “(And I’m
Australian).”

--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
         <div role="main" class="ui-content" data-role="content">
 
             <div id="center-button" style="text-align: center;">
-
+                <!-- I'm commenting out the Buttons for now, to change it to a Buttons using JPEG images :) - Tammy  
                 <button class="FB-login" id="login-with-facebook" data-inline="true">Login with Facebook</button>
 
                 <a href="#popupFacebook" data-rel="popup" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-inline" data-transition="fade" data-position-to="window">Basic Popup</a>
@@ -57,11 +57,12 @@
                 </div>  
 
                  <a href="#mainpage" data-role="button" data-mini="true" data-inline="true">Shortcut to mainpage (dev)</a>
-                 <a href="#pestpage" data-role="button" data-mini="true" data-inline="true">Pest Information</a>
+                 <a href="#pestpage" data-role="button" data-mini="true" data-inline="true">Pest Information</a> -->
 
             </div>
 
-        </div><!-- content-->
+        </div><!-- content--> 
+				
 
     </div>
 
@@ -251,6 +252,7 @@
             <div ><img class="InfoPage" src="css/images/PossumInfoPage.jpg"></div>
 
             <div class="statistics-container">
+				
               <div class="statistics-div">Number of possums you have spotted:&nbsp </div><div id="count-div-possum" class="statistics-div"> ...</div>
             </div>
 
