logIn Facebook button

--- a/www/index.html
+++ b/www/index.html
@@ -60,10 +60,10 @@ ABBR<!DOCTYPE html>
                 <div data-role="popup" id="popupFacebook" class="ui-content">
                     <h4>Your information will be kept private.</h4>
                     <p></p>
-                </div>  
+                </div>  -->
 
-                 <a href="#mainpage" data-role="button" data-mini="true" data-inline="true">Shortcut to mainpage (dev)</a>
-                 <a href="#pestpage" data-role="button" data-mini="true" data-inline="true">Pest Information</a> -->
+                 <a href="#LogInPageFacebookButton" data-role="button" data-mini="true" data-inline="true"><img id="img class="infoButton report-rat" src="css/images/InfoButton.png"" src="css/images/InfoButton.png"></+a>
+                 <a href="#pestpage" data-role="button" data-mini="true" data-inline="true">Pest Information</a> 
 
             </div>
 
@@ -71,6 +71,7 @@ ABBR<!DOCTYPE html>
 				
 
     </div>
+</div>
 
     <!-- MAIN PAGE -->
     <div data-role="page" id="mainpage" class="ui-page">
