fixed broken currentPest

--- a/www/index.html
+++ b/www/index.html
@@ -115,14 +115,14 @@ ABBR<!DOCTYPE html>
               </div>
       
               <div>
-                <a href="#ratpage" data-rel="infoPage" data-transition="slide"><div class="main-image" id="rat" ></div></a>
-                <a href="#possumpage" data-rel="infoPage" data-transition="slide"><div class="main-image" id="possum" ></div></a>
-                <a href="#stoatpage" data-rel="infoPage" data-transition="slide"><div class="main-image" id="stoat" ></div></a>
-                <a href="#catpage" data-rel="infoPage" data-transition="slide"><div class="main-image" id="other" ></div></a>
-                <a href="#popup-report-main" data-rel="popup"><img class="reportButStoat report-stoat" src="css/images/reportBut.png"> </a>   
-                <a href="#popup-report-main" data-rel="popup"><img class="reportButCat report-cat" src="css/images/reportBut.png"> </a>
-                <a href="#popup-report-main" data-rel="popup"><img class="reportButPos report-possum" src="css/images/reportBut.png"> </a>
-                <a href="#popup-report-main" data-rel="popup"><img class="reportButRat report-rat" src="css/images/reportBut.png"> </a>
+                <a href="#ratpage" class="report-rat" data-rel="infoPage" data-transition="slide"><div class="main-image" id="rat" ></div></a>
+                <a href="#possumpage" class="report-possum" data-rel="infoPage" data-transition="slide"><div class="main-image" id="possum" ></div></a>
+                <a href="#stoatpage" class="report-stoat" data-rel="infoPage" data-transition="slide"><div class="main-image" id="stoat" ></div></a>
+                <a href="#catpage" class="report-cat" data-rel="infoPage" data-transition="slide"><div class="main-image" id="other" ></div></a>
+                <a href="#popup-report-main" class="report-stoat" data-rel="popup"><img class="reportButStoat report-stoat" src="css/images/reportBut.png"> </a>   
+                <a href="#popup-report-main" class="report-cat" data-rel="popup"><img class="reportButCat report-cat" src="css/images/reportBut.png"> </a>
+                <a href="#popup-report-main" class="report-possum" data-rel="popup"><img class="reportButPos report-possum" src="css/images/reportBut.png"> </a>
+                <a href="#popup-report-main" class="report-rat" data-rel="popup"><img class="reportButRat report-rat" src="css/images/reportBut.png"> </a>
             </div>
 
              <!--InfoPopup-->
@@ -181,10 +181,10 @@ ABBR<!DOCTYPE html>
 
           <img class="InfoPestPage" src="css/images/About.png">
           <div>
-            <a href="#possumpage" data-rel="infoPage" data-transition="slide" data-direction="reverse"><div id="poss" ><img class="pestPic report-possum" src="css/images/Possum.jpg"></div></a>
-            <a href="#catpage" data-rel="infoPage" data-transition="slide" data-direction="reverse"><div id="cat" ><img class="pestPic report-cat" src="css/images/Cat.jpg"></div></a>
-            <a href="#ratpage" data-rel="infoPage" data-transition="slide" data-direction="reverse"><div id="ratt" ><img class="pestPic report-rat" src="css/images/Rat.jpg"></div></a>
-            <a href="#stoatpage" data-rel="infoPage" data-transition="slide" data-direction="reverse"><div id="poss" ><img class="pestPic report-rat" src="css/images/Stoat.jpg"></div></a>
+            <a href="#possumpage" class="report-possum" data-rel="infoPage" data-transition="slide" data-direction="reverse"><div id="poss" ><img class="pestPic report-possum" src="css/images/Possum.jpg"></div></a>
+            <a href="#catpage" class="report-cat" data-rel="infoPage" data-transition="slide" data-direction="reverse"><div id="cat" ><img class="pestPic report-cat" src="css/images/Cat.jpg"></div></a>
+            <a href="#ratpage" class="report-rat" data-rel="infoPage" data-transition="slide" data-direction="reverse"><div id="ratt" ><img class="pestPic report-rat" src="css/images/Rat.jpg"></div></a>
+            <a href="#stoatpage" class="report-stoat" data-rel="infoPage" data-transition="slide" data-direction="reverse"><div id="poss" ><img class="pestPic report-rat" src="css/images/Stoat.jpg"></div></a>
           </div>
         </div><!-- content-->
 
