fixed logout logic

--- a/www/index.html
+++ b/www/index.html
@@ -34,8 +34,8 @@ ABBR<!DOCTYPE html>
 
         <!-- Universal header -->
         <div data-role="header" data-position="fixed">
-                 <div><a href="#pestpage" data-transition"slide"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
-                <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
+                <div><a href="#pestpage" data-transition"slide"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
+                <div class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></div>
                 <h1>SnapPest</h1>
         </div>
 		
@@ -65,22 +65,6 @@ ABBR<!DOCTYPE html>
 		                  </div>-->
                 </div>  
             </div>
-
-            <!-- PHONE CONFIRM DIALOGUE --><!--
-            <div data-role="popup" id="popup-confirm-phone" data-overlay-theme="a" data-theme="a" data-dismissible="false" style="max-width:400px;" class="ui-corner-all">
-                    <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
-                    <div data-role="header" data-theme="a" class="ui-corner-top">
-                        <h1>Sign in with Phone</h1>
-                    </div>
-                    <div data-role="content" data-theme="a" class="ui-corner-bottom ui-content">
-                        <h3 class="ui-title">Are you sure you would like to use this method?</h3>
-                        <p>This action will use your phone number for identification</p>
-                        <a href="#" data-role="button" data-inline="true" data-rel="back">Cancel</a>
-                        <button data-inline="true" data-rel="back" id="phone-login">Yes</button>
-                    </div>
-              </div>--><!--Phone Confirm-->
-
-
         </div><!-- content--> 
 				
 
@@ -105,7 +89,7 @@ ABBR<!DOCTYPE html>
         <!-- Universal header -->
         <div data-role="header" data-position="fixed">
                 <div><a href="#pestpage" data-transition="slide" data-direction="reverse"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
-                <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
+                <div class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></div>
                 <h1>SnapPest</h1>
         </div>
 	
@@ -176,7 +160,7 @@ ABBR<!DOCTYPE html>
         <!-- Universal header -->
         <div data-role="header" data-position="fixed">
                <div><a href="#mainpage" data-transition="slide"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
-                <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
+                <div class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></div>
                 <h1>SnapPest</h1>
 
         </div>
@@ -217,7 +201,7 @@ ABBR<!DOCTYPE html>
            <!-- Universal header -->
             <div data-role="header" data-position="fixed">
                    <div><a href="#mainpage" data-transition="slide" data-direction="reverse"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
-                   <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
+                   <div class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></div>
                    <h1>SnapPest</h1>
            </div>
 
@@ -269,7 +253,7 @@ ABBR<!DOCTYPE html>
         <!-- Universal header -->
          <div data-role="header" data-position="fixed">
                 <div><a href="#mainpage" data-transition="slide" data-direction="reverse" ><img id="infoButt" src="css/images/AboutButton.png"></a></div>
-                <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
+                <div class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></div>
                 <h1>SnapPest</h1>
         </div>
 
@@ -325,7 +309,7 @@ ABBR<!DOCTYPE html>
            <!-- Universal header -->
             <div data-role="header" data-position="fixed">
                    <div><a href="#mainpage" data-transition="slide" data-direction="reverse"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
-                   <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
+                   <div class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></div>
                    <h1>SnapPest</h1> 
            </div>
 
@@ -378,7 +362,7 @@ ABBR<!DOCTYPE html>
               <!-- Universal header -->
                <div data-role="header" data-position="fixed">
                       <div><a href="#mainpage" data-transition="slide" data-direction="reverse"><img id="infoButt" src="css/images/AboutButton.png"></a></div>
-                      <div><a href="#logout" class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></a></div>
+                      <div class="FB-logout"><img id="logoutButt" src="css/images/logout.png"></div>
                       <h1>SnapPest</h1>
               </div>
 
