--- a/www/index.html
+++ b/www/index.html
@@ -1,4 +1,4 @@
-ABBR<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>SnapPest</title>
@@ -10,7 +10,7 @@ ABBR<!DOCTYPE html>
 <script src="js/jquery-1.9.1.min.js"></script>
 <link rel="stylesheet" href="css/judas.css" />
 <link rel="stylesheet" href="css/jquery.mobile.icons.min.css" />
-<script src="js/jquery.mobile-1.4.2.min.js"></script>
+<script src="js/jquery.mobile-1.4.2.js"></script>
 <script type="text/javascript" src="phonegap.js"></script>
 <script type="text/javascript" src="js/facebook-js-sdk.js"></script>
 <script type="text/javascript" src="js/cdv-plugin-fb-connect.js"></script>
