fixed popup, hacked up count

--- a/www/index.html
+++ b/www/index.html
@@ -58,11 +58,11 @@
 					<!-- The Facebook Log In Widget -->
                 <div> 
                      <button class="FB-login" id="login-with-facebook" data-inline="true"><img id="LogInPageFacebookButton"  class="loginButton" src="css/images/LogInPageFacebookButton.jpg"></button>
-                     <!-- Currently has no position, please fix
-                      <a href="#popupFacebook" data-rel="popup" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all" data-transition="fade" data-position-to="window">Basic Popup</a>
+    
+                      <a href="#popupFacebook" id="popupFBicon" data-rel="popup" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all" data-transition="fade" data-position-to="window">Basic Popup</a>
                        <div data-role="popup" id="popupFacebook" class="ui-content">
                       	 <h4>Your information will be kept private.</h4>
-		                  </div>-->
+		                  </div>
                 </div>  
             </div>
         </div><!-- content--> 
@@ -120,7 +120,7 @@
             </div><!--report popup-->
 
             <!-- Thank you Popup -->
-            <div data-role="popup" class="photopopup" id='thanks-popup-main' data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
+            <div data-role="popup" class="photopopup" id='thanks-popup-main' data-theme="none" data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
                 <img src="css/images/ReportThankYou_CIRCLE.png" alt="Photo portrait">
             </div>  
 
@@ -212,7 +212,7 @@
                </div><!--report popup-->
 
              <!-- Thank you Popup -->
-             <div data-role="popup" class="photopopup" id='thanks-popup-cat' data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
+             <div data-role="popup" class="photopopup" id='thanks-popup-cat' data-theme="none" data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
                  <img src="css/images/ReportThankYou_CIRCLE.png" alt="Photo portrait">
              </div> 
 
@@ -265,7 +265,7 @@
             </div><!--report popup-->
 
             <!-- Thank you Popup -->
-            <div data-role="popup" class="photopopup" id='thanks-popup-possum' data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
+            <div data-role="popup" class="photopopup" id='thanks-popup-possum' data-theme="none" data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
                 <img src="css/images/ReportThankYou_CIRCLE.png" alt="Photo portrait">
             </div>  
 
@@ -320,7 +320,7 @@
               </div><!--report popup-->
 
             <!-- Thank you Popup -->
-            <div data-role="popup" class="photopopup" id='thanks-popup-rat' data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
+            <div data-role="popup" class="photopopup" id='thanks-popup-rat' data-theme="none" data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
                 <img src="css/images/ReportThankYou_CIRCLE.png" alt="Photo portrait">
             </div> 
            
@@ -375,7 +375,7 @@
                   </div><!--report popup-->
 
                 <!-- Thank you Popup -->
-                <div data-role="popup" class="photopopup" id='thanks-popup-stoat' data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
+                <div data-role="popup" class="photopopup" id='thanks-popup-stoat' data-theme="none" data-overlay-theme="none" data-corners="false" data-tolerance="30,15">
                     <img src="css/images/ReportThankYou_CIRCLE.png" alt="Photo portrait">
                 </div> 
 
